--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,16 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="phil.nanodegree.com.popularmovies.MovieDetailActivity"
+            android:label="@string/title_activity_detail"
+            android:parentActivityName="phil.nanodegree.com.popularmovies.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="phil.nanodegree.com.popularmovies.MainActivity" />
         </activity>
         <provider
             android:authorities="@string/content_authority"
